[tool.poetry]
name = "khs-pyside6"
version = "0.1.0"
description = ""
authors = ["Gu Pingan"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pyside6 = "6.6.3"
loguru = "0.7.2"
requests = "^2.31.0"
wmi = "1.5.1"
pyee = "^11.1.0"
toml = "^0.10.2"
pyppeteer = "^2.0.0"
pywin32 = "^306"
qrcode = "7.4.2"
xhs = {path = "pack/packages/xhs-1.0.2-py3-none-any.whl"}

[[tool.poetry.source]]
name = "tencent-pypi"
url = "http://mirrors.cloud.tencent.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

